[metadata]
name = dpop
version = attr: dpop.__version__
description = Dancing Pile-Of-Poo Gif Generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hamukazu/dpop
license = MIT
author = Kimikazu Kato
author_email = kimikazu@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    pillow
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    dpop = dpop.dpop:main
