[metadata]
name = dpop
version = attr: dpop.__version__
description = Dancing Pile-Of-Poo Gif Generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hamukazu/dpop
license = MIT
author = Kimikazu Kato
author_email = kimikazu@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    pillow>=9.0.0
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    dpop = dpop.dpop:main

[options.extras_require]
dev =
    flake8-black>=0.3.2
    mypy>=0.931
    isort>=5.10.1
    pytest>=7.0.1
    setuptools>=60.9.3
    types-setuptools>=57.4.9

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
